--- a/force-app/main/default/classes/AccountTriggerHandler.cls
+++ b/force-app/main/default/classes/AccountTriggerHandler.cls
@@ -18,38 +18,38 @@ public without sharing class AccountTriggerHandler implements TriggerHandler {
     }
 
     public void beforeInsert(List<Account> newAccounts) {
-        // helper.doTask1();
-        // helper.doTask2();
+        helper.doTask1();
+        helper.doTask2();
     }
 
     public void beforeUpdate(List<Account> oldAccounts, List<Account> newAccounts, Map<ID, SObject> oldAccountMap, Map<ID, SObject> newAccountMap) {
-        // helper.doTask3();
-        // helper.doTask4();
+        helper.doTask3();
+        helper.doTask4();
     }
 
     public void beforeDelete(List<Account> oldAccounts, Map<ID, SObject> oldAccountMap) {
-        // helper.doTask5();
-        // helper.doTask1();
+        helper.doTask5();
+        helper.doTask1();
     }
 
     public void afterInsert(List<Account> newAccounts, Map<ID, SObject> newAccountMap) {
-        // helper.doTask2();
-        // helper.doTask3();
+        helper.doTask2();
+        helper.doTask3();
     }
 
     public void afterUpdate(List<Account> oldAccounts, List<Account> newAccounts, Map<ID, SObject> oldAccountMap, Map<ID, SObject> newAccountMap) {
-        // helper.doTask4();
-        // helper.doTask5();
+        helper.doTask4();
+        helper.doTask5();
     }
 
     public void afterDelete(List<Account> oldAccounts, Map<ID, SObject> oldAccountMap) {
-        // helper.doTask3();
-        // helper.doTask1();
+        helper.doTask3();
+        helper.doTask1();
     }
 
     public void afterUndelete(List<Account> newAccounts, Map<ID, SObject> newAccountMap) {
-        // helper.doTask4();
-        // helper.doTask2();
+        helper.doTask4();
+        helper.doTask2();
     }
 
 }
